--- a/src/Header.css
+++ b/src/Header.css
@@ -1,3 +1,8 @@
+.header{
+    display:flex;
+}
+
+
 .container{
     display:flex;
     height:25px;
@@ -13,3 +18,14 @@ button{
 #bar{
     border:0;
 }
+
+nav{
+    margin-left:20px;
+    align-self:center;
+}
+
+#link{
+    margin-right:20px;
+    text-decoration:none;
+}
+
