--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,3 +1,8 @@
 .p{
-    align-self:center;
+    height:100px;
+    width:100%;
+    text-align:center;
+    padding-top:50px;
+    background-color:rgba(95, 92, 92, 0.174);
+    margin-top:20px;
 }
